--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,6 @@
 
 @import "pages/index.scss";
 @import "pages/category.scss";
-@import "pages/chesses.scss";
+@import "pages/cheses.scss";
 
 @import "base/media.scss";
