--- a/sass/pages/cheses.scss
+++ b/sass/pages/cheses.scss
@@ -9,9 +9,12 @@
 }
 
 .container_chesse{
-    padding: 3rem 4rem;
-    margin: auto;
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 12rem 0rem 2rem 0rem;
+    width: 90%;
     .card{
         border: none;
         h4{
@@ -19,6 +22,7 @@
         }
     }
     img{
+        box-shadow: 0px 0px 8px 0px rgb(143, 137, 137);
         max-width: 423px;
         max-height: 320px;
     }
@@ -26,6 +30,7 @@
         padding-bottom: 5rem;
     }
 }
+
 
 // slide images
   .carousel-indicators li{
