--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@
 }
 
 .jumbotron {
-  background: #182329;
+  background: #28534a;
   margin-top: -0.5px;
   padding: 1em;
 }
@@ -228,7 +228,10 @@
   align-items: center;
   flex-direction: column;
   padding: 12rem 0rem 2rem 0rem;
-  width: 90%;
+  width: 85%;
+}
+.container_chesse a {
+  text-decoration: none;
 }
 .container_chesse .card {
   border: none;
@@ -251,6 +254,93 @@
 
 .carousel-indicators dl, ol, ul {
   margin-bottom: 3rem;
+}
+
+.chaseHitsCat {
+  height: 91.8vh;
+  width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.chaseHitsCat .card {
+  border: none;
+}
+
+.chaseHitsCat-card {
+  padding-top: 6rem;
+  flex-direction: row;
+}
+.chaseHitsCat-card img {
+  width: 35vw;
+}
+.chaseHitsCat-card .hitsCardBody {
+  text-align: left;
+  font-family: "font_all";
+  padding-left: 2rem;
+  flex-direction: column;
+}
+.chaseHitsCat-card .hitsCardBody .card-text {
+  padding-bottom: 3rem;
+}
+
+.hitsbn-btn-three a {
+  color: #cf0b0b;
+  font-weight: 600;
+  font-size: 1.5rem;
+}
+
+.hitsbtn-container {
+  background-color: #dcddd5;
+  width: 100%;
+  height: 18%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hitsbtn-container .hitsbn-btn {
+  line-height: 50px;
+  height: 50px;
+  text-align: center;
+  width: 250px;
+  cursor: pointer;
+}
+.hitsbtn-container .hitsbn-btn-three {
+  transition: all 0.5s;
+  position: relative;
+}
+.hitsbtn-container .hitsbn-btn-three::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(17, 3, 3, 0.1);
+  transition: all 0.3s;
+}
+.hitsbtn-container .hitsbn-btn-three:hover::before {
+  opacity: 0;
+  transform: scale(0.5, 0.5);
+}
+.hitsbtn-container .hitsbn-btn-three::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border: 1px solid rgba(233, 88, 80, 0.75);
+  transform: scale(1.2, 1.2);
+}
+.hitsbtn-container .hitsbn-btn-three:hover::after {
+  opacity: 1;
+  transform: scale(1, 1);
 }
 
 @media (max-width: 576px) {
@@ -315,6 +405,29 @@
 
   .container_chesse .card-body {
     padding-bottom: 2rem;
+  }
+}
+@media (max-width: 800px) {
+  .chaseHitsCat-card {
+    flex-direction: column;
+  }
+
+  .chaseHitsCat-card img {
+    width: auto;
+  }
+}
+@media (max-width: 600px) {
+  .chaseHitsCat {
+    height: auto;
+  }
+
+  .chaseHitsCat-card .hitsCardBody .card-text {
+    padding-bottom: 0rem;
+  }
+
+  .chaseHitsCat-card {
+    padding-top: 8rem;
+    padding-bottom: 1rem;
   }
 }
 
