--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -80,7 +80,6 @@
             font-family: 'font_h1_header';
             margin-bottom: 40px;
             text-shadow: 0px 0px 8px black;
-        
             letter-spacing: 1rem;
         }
         
@@ -118,7 +117,7 @@
 }
 
 .jumbotron{
-    background: #182329;
+    background: #28534a;
     margin-top: -0.5px;
     padding: 1em;
 }
