--- a/sass/pages/hits/chaseHitsCat.scss
+++ b/sass/pages/hits/chaseHitsCat.scss
@@ -23,6 +23,10 @@
         flex-direction: column;
         .card-text{
             padding-bottom: 3rem;
+            padding-top: 1rem;
+        }
+        h5, span{
+            font-weight: bold;
         }
     }
 }
