--- a/sass/pages/cheses.scss
+++ b/sass/pages/cheses.scss
@@ -34,6 +34,14 @@
     }
 }
 
+.carousel-item {
+    width: 100%;
+    height: 100%;
+}
+// .carousel-item .card-body:last-child{
+//     margin-bottom: 3.5rem;
+// }
+
 
 // slide images
   .carousel-indicators li{
