--- a/sass/pages/hits/chaseHitsCat.scss
+++ b/sass/pages/hits/chaseHitsCat.scss
@@ -1,6 +1,5 @@
 .chaseHitsCat{
-    height: 91.8vh;
-    width: 60%;
+    min-height: 91.8vh;
     display: flex;
     align-items: center;
     justify-content: center;
