--- a/css/styles.css
+++ b/css/styles.css
@@ -262,8 +262,7 @@
 }
 
 .chaseHitsCat {
-  height: 91.8vh;
-  width: 60%;
+  min-height: 91.8vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -422,6 +421,11 @@
     padding-bottom: 2rem;
   }
 }
+@media (max-width: 1024px) {
+  .chaseHitsCat {
+    min-height: 94.4vh;
+  }
+}
 @media (max-width: 800px) {
   .chaseHitsCat {
     width: 90%;
@@ -439,6 +443,10 @@
   }
 }
 @media (max-width: 600px) {
+  .chaseHitsCat {
+    min-height: 89vh;
+  }
+
   .chaseHitsCat {
     height: auto;
   }
@@ -463,7 +471,7 @@
   }
 
   .hitsCategories-carousel {
-    bottom: -3.6%;
+    bottom: 0;
   }
 
   .carousel-item .card-body:last-child {
