--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "pages/index.scss";
 @import "pages/category.scss";
 @import "pages/cheses.scss";
+@import "pages/contact.scss";
 
 @import "pages/hits/chaseHitsCat.scss";
 @import "base/media.scss";
