--- a/sass/pages/contact.scss
+++ b/sass/pages/contact.scss
@@ -1,6 +1,42 @@
 
 
-.resp-iframe{
-    width: 40vw;
-    height: 50vh;
+.contactHeaderMain_bgvideo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: no-repeat center
+    center/cover;
+}
+.contactHeaderMain_bgvideo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+video{
+    min-width: 100vw;
+    min-height: 100vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+.contactHeaderMain_content{
+    background: rgba(0, 8, 0, 0.3);
+    z-index: 1;
+
+    // h3, p, a{ #b6d7de
+    h3{
+        color: #ffffff;
+        font-size: 3.5em;
+    }
+    p, a{
+        color: #dcddd5;
+        font-size: 1.5em;
+    }
 }
